--- a/changelog.txt
+++ b/changelog.txt
@@ -1,17 +1,32 @@
 A log of changes between each release.
 
 ************************************
-Version 0.2
+Version 0.3       Release Date: 01-06-2021
+  - Tweaked certain sprites
+  - Added Animation loop for bouncing (test with diagonal sprints)
+  - Added 'clinging on' sprites (test in SFZ)
+  - Added water sliding sprites (test in HPZ & ARZ)
+  - Added hanging sprites with animation loop (test in SFZ)
+  
+  4 new animations
+  7 new sprites in total
+  
+************************************
+Version 0.2     Release Date: 31-05-2021
   - Added a custom gasping animation
   - Added a custom death animation (not currently used)
-  - Added a bouncing animation for springs
+  - Added a bouncing sprite for diagonal springs
   - Fixed an issue with the looking up animations being off-centre on the Y-Axis.
   - Fixed Sonic's longer legs in the looking up animation
   
+  2 new sprites in total
+  
 ************************************
-Version 0.1
+Version 0.1     Release Date: 30-05-21
   Very first release!!!
   - Two new sprites for looking up
   - Fourth sprite sheet for the new sprites
+  
+  2 new sprites in total
   
 ************************************
